--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="..\..\..\..\test\serialize.cpp" />
     <ClCompile Include="..\..\..\..\test\stealth.cpp" />
     <ClCompile Include="..\..\..\..\test\stealth_address.cpp" />
+    <ClCompile Include="..\..\..\..\test\thread.cpp" />
     <ClCompile Include="..\..\..\..\test\unicode.cpp" />
     <ClCompile Include="..\..\..\..\test\unicode_istream.cpp" />
     <ClCompile Include="..\..\..\..\test\unicode_ostream.cpp" />
