Update configure.ac to make clear that Automake 1.14 or newer is required.
Update configure.ac to make clear that Automake 1.14 or newer is required.

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,8 @@
 #
 ###############################################################################
 
+# *** Requires Automake 1.14 or newer ***
+
 # Standard declarations.
 #==============================================================================
 # Declare the required version of autoconf.
