Add checkpoint and endpoint tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -147,8 +147,10 @@ test_libbitcoin_test_SOURCES = \
     test/big_number.hpp \
     test/binary.cpp \
     test/binary_trie.cpp \
+    test/checkpoint.cpp \
     test/checksum.cpp \
     test/ec_keys.cpp \
+    test/endpoint.cpp \
     test/format.cpp \
     test/hash.cpp \
     test/hash.hpp \
