--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj
@@ -78,8 +78,10 @@
     <ClCompile Include="..\..\..\..\test\big_number.cpp" />
     <ClCompile Include="..\..\..\..\test\binary.cpp" />
     <ClCompile Include="..\..\..\..\test\binary_trie.cpp" />
+    <ClCompile Include="..\..\..\..\test\checkpoint.cpp" />
     <ClCompile Include="..\..\..\..\test\checksum.cpp" />
     <ClCompile Include="..\..\..\..\test\ec_keys.cpp" />
+    <ClCompile Include="..\..\..\..\test\endpoint.cpp" />
     <ClCompile Include="..\..\..\..\test\format.cpp" />
     <ClCompile Include="..\..\..\..\test\hash.cpp" />
     <ClCompile Include="..\..\..\..\test\hash_number.cpp" />
